@@ -4,6 +4,7 @@ version 0.9+
 	* Add `webstatus` subcommand
 	* Add bvalue() function
 	* Fix bug in `shell` subcommand (`value` was not in global namespace)
+	* Improve identity()
 
 version 0.9 Mon Dec 5 2011 by luispedro
 	* In the presence of a barrier(), rerun the jugfile
